2006-06-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: fixed memory leak bugs related GdkPixbuf.

2006-05-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c (rb_rsvg_handle_initialize): use G_INITIALIZE if
	available.

2006-05-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c (Init_rsvg2): Don't use
	librsvg_{major,minor,micro}_version because they became to local
	variable.

2006-03-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: hid rsvg_init() and rsvg_term() from Ruby.
	* src/lib/rsvg2.rb: ditto.

	* sample/svg2.rb:
	  - added workaround of rsvg_handle_new_from()'s bug.
	  - fixed typo.

2006-03-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: Supported 2.14.
	* src/lib/rsvg2.rb: ditto.
	* extconf.rb: ditto.

	* sample/svg2.rb: Added an example with cairo.

	* README:
	  - Fixed format.
	  - Updated copying.

2006-01-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: Added RSVG::BINDING_VERSION, RBRSVG_MAJOR_VERSION,
	RBRSVG_MINOR_VERSION, RBRSVG_MICRO_VERSION.

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c:
	- Added RSVG::VERSION, RSVG::MAJOR_VERSION, RSVG::MINOR_VERSION
	  and RSVG::MICRO_VERSION.
	- Revised copyright information.
	- Fixed indentation.

2005-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: Support 2.9, 2.11 and 2.12.
	* src/lib/rsvg2.rb: ditto.

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbrsvg.c: Fix compiling warnings.

2005-07-17  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: check system has librsvg/rsvg-gz.h header or not.

	* src/rbrsvg.c: include librsvg/rsvg.h instead of
	librsvg/rsvg-gz.h if librsvg/rsvg-gz.h is not exist.

	* src/rbrsvg.c (rb_rsvg_handle_new): use rsvg_handle_new for
	fallback if librsvg/rsvg-gz.h is not exist and we are required
	gz handling.

2005-06-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbrsvg.c: fixed macro name. (HAVE_LIBRSVG_LIBRSVG_ENUM_TYPES_H)

2005-06-12  Kouhei Sutou  <kou@cozmixng.org>
